@@ -1,5 +1,10 @@
 #!/bin/sh
 java -server -Xmx${Xmx} -Xms${Xms} -Xmn${Xmn} \
+     -Xss1024k -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC \
+     -XX:+CMSParallelRemarkEnabled -XX:+UseCMSCompactAtFullCollection  \
+     -XX:LargePageSizeInBytes=${Xml} -XX:+UseFastAccessorMethods  \
+     -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 \
+     -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/apache-tomcat/logs/hs-dump.hprof \
      -XX:ErrorFile=/apache-tomcat/logs/hs_error%p.log \
      -Dfile.encoding=UTF-8  \
      -Dlogging.path=/apache-tomcat/logs \
